connecting bootstrap to the html

--- a/mygallery/templates/all-photos/base.html
+++ b/mygallery/templates/all-photos/base.html
@@ -8,6 +8,10 @@
     <title> My Gallery</title>
   {% endif %}
 
+  {% block styles %}
+    {% bootstrap_css %}
+  {% endblock %}
+
 </head>
 <body>
     {% block content %} <h1>Photos for {{date|date:"l d-F Y"}}</h1> {%endblock%}
