--- a/mygallery/templates/all-photos/base.html
+++ b/mygallery/templates/all-photos/base.html
@@ -1,4 +1,4 @@
-{% load bootstrap3 %}
+{% load bootstrap4 %}
 <!DOCTYPE html>
 <html>
 <head>
@@ -15,7 +15,7 @@
 
 </head>
 <body>
-    {% block content %} <h1>Photos for {{date|date:"l d-F Y"}}</h1> {%endblock%}
+    {% block content %} <h1 class='text-center'>Photos for {{date|date:"l d-F Y"}}</h1> {%endblock%}
 
 
     {% block scripts %}
