--- a/mygallery/templates/all-photos/base.html
+++ b/mygallery/templates/all-photos/base.html
@@ -15,6 +15,8 @@
 
 </head>
 <body>
+    {% include "navbar.html" %}
+
     {% block content %} <h1 class='text-center'>Photos for {{date|date:"l d-F Y"}}</h1> {%endblock%}
 
 
