--- a/mygallery/templates/navbar.html
+++ b/mygallery/templates/navbar.html
@@ -9,7 +9,7 @@
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="{% url 'mygalleryToday' %}">My Photos</a>
+      <a class="navbar-brand" href="{% url 'galleryToday' %}">My Photos</a>
     </div>
   </div>
 </nav>
