--- a/mygallery/templates/all-photos/base.html
+++ b/mygallery/templates/all-photos/base.html
@@ -1,4 +1,5 @@
 {% load bootstrap4 %}
+{% load static%}
 <!DOCTYPE html>
 <html>
 <head>
@@ -11,6 +12,7 @@
 
   {% block styles %}
     {% bootstrap_css %}
+    <link rel="stylesheet" href="{% static 'css/basegallery.css' %}">
   {% endblock %}
 
 </head>
