--- a/mygallery/templates/gallery.html
+++ b/mygallery/templates/gallery.html
@@ -1,1 +1,36 @@
-<h3> My photos</h3>
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <title>gallery</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+</head>
+<body>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-3">
+
+                <div class="card">
+                    <div class="card-header">
+                        Gallery
+                    </div>
+                    <ul class="list-group list-group-flush">
+                        <li class="list-group-item"> </li>
+                        <li class="list-group-item"> </li>
+                        <li class="list-group-item"> </li>
+                    </ul>
+                </div>
+                
+            </div>
+            <div class="col-md-6">
+                Gallery
+            </div>
+        </div>
+    </div>
+
+
+
+
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+</body>
