add cards to display image

--- a/mygallery/templates/gallery.html
+++ b/mygallery/templates/gallery.html
@@ -5,25 +5,36 @@
   <title>gallery</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
-<body>
+<body class="m-5">
     <div class="container">
         <div class="row">
             <div class="col-md-3">
 
                 <div class="card">
                     <div class="card-header">
-                        Gallery
+                        Categories
                     </div>
                     <ul class="list-group list-group-flush">
-                        <li class="list-group-item"> </li>
+                        <li class="list-group-item">All </li>
                         <li class="list-group-item"> </li>
                         <li class="list-group-item"> </li>
                     </ul>
                 </div>
                 
             </div>
-            <div class="col-md-6">
-                Gallery
+            <div class="col-md-9">
+                <div class="row">
+                    <div class="card">
+                        <img class="card-img-top" src="https://www.google.com/search?q=mountain+photos&tbm=isch&source=iu&ictx=1&vet=1&fir=GE0onLLv-lt5ZM%252C8ekAX1HJPbycwM%252C_%253BI-8ZoQspu-qLjM%252CEydXshyT7um37M%252C_%253B6bsVUFYAfe3WBM%252CH4gu-mz1Jx57mM%252C_%253BMaJqjjRIB5Np9M%252CuS7MjZEe
+                        _3oaxM%252C_%253BKDAqWiFQqS2LFM%252CcI5lldiSMEz8xM%252C_%253BzEXBDZQarCo0eM%252Ci6n3jfUgl2ofbM%252C_%253B1V4qNQg1qNZeiM%252Cm-RtkFK2iNctFM%252C_%253B9WOHiGC_oMGzlM%252CoMHeB-t59sRieM%252C_%253BhRiFopeE9B1iIM%252C8ekAX1HJPbycwM%252C_%253BCtsdlE9iEX9IUM%252CQvhUd3nHNL1a9M%252C
+                        _%253BqWevJPxModha1M%252CQvhUd3nHNL1a9M%252C_%253BHf8S6w55L5Qv-M%252Ci6n3jfUgl2ofbM%252C_&usg=AI4_-kSJMGY7CuMe2NZ6A2SFj84yng_dTQ&sa=X&ved=2ahUKEwjikYjB5-b2AhUGgf0HHRhNC7cQ9QF6BAgNEAE#imgrc=hRiFopeE9B1iIM" alt="Card image cap">
+                        <div class="card-body">
+                            <p class="card-text">
+
+                            </p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
