--- a/mygallery/templates/gallery.html
+++ b/mygallery/templates/gallery.html
@@ -7,6 +7,7 @@
   <style>
       .image-thumbnail{
           height: 200px;
+          object-fit: cover;
       }
   </style>
 </head>
@@ -23,6 +24,10 @@
                         <li class="list-group-item">All </li>
                         <li class="list-group-item"> </li>
                         <li class="list-group-item"> </li>
+
+                        <li class="list-group-item">
+                            <a href="{% url 'add' %}" class="btn btn-dark btn-block btn-sm m-1">Add Photo</a>
+                        </li>
                     </ul>
                 </div>
                 
@@ -42,7 +47,7 @@
                     
                     <div class="col-md-4">
                         <div class="card my-2">
-                            <img class="image-thumbnail" src="https://www.pngall.com/wp-content/uploads/4/Beagle-Dog-PNG-Free-Download.png" alt="Card image cap">
+                            <img class="image-thumbnail" src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/dog-puppy-on-garden-royalty-free-image-1586966191.jpg?crop=0.752xw:1.00xh;0.175xw,0&resize=640:*" alt="Card image cap">
                             
                             <div class="card-body">
                                 <small>Category: Pets</small>
