--- a/mygallery/templates/photo.html
+++ b/mygallery/templates/photo.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <title>gallery</title>
 </head>
 
@@ -12,7 +12,14 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col">
-                <a class="">Go Back</a>
+
+                <a href="{% url 'gallery' %}" class="btn btn-dark my-3">Go Back</a>
+                
+                <div style="height: 90vh;">
+                    <img style="max-width: 100%; max-height: 100%;" src="https://www.pngall.com/wp-content/uploads/4/Beagle-Dog-PNG-Free-Download.png" alt="Card image cap">
+                    <p>Lorem ipsum dolor sit amet. Ut consequuntur quae aut aliquid reprehenderit sed impedit velit ut officiis tenetur qui soluta asperiores! Sed omnis velit ut temporibus dolore et laboriosam consequatur.</p>
+                </div>
+
             </div>
         </div>
     </div>
