--- a/mygallery/templates/add.html
+++ b/mygallery/templates/add.html
@@ -13,7 +13,26 @@
         <div class="row justify-content-center">
             <div class="col-md-4">
                 <a href="{% url 'gallery' %}" class="btn btn-dark my-3">Go Back</a>
-                Form
+                <div class="card">
+                    <form>
+                        <div class="form-group m-3">
+                            <label>Description</label>
+                            <input name="description" type="text" placeholder="Enter a description" class="form-control">
+                        </div>
+                        
+                        <div class="form-group m-3">
+                            <label>Select a cetegory</label>
+                            <select name="category" class="form-control">
+                                <option value='none'>Select a category...</option>
+                            </select>
+                        </div>
+
+                        <div class="form-group m-3">
+                            <label>Upload image</label>
+                            <input name="image" type="file" placeholder="form-control-file">
+                        </div>
+                    </form>
+                </div>
             </div>
         </div>
     </div>
