--- a/mygallery/templates/add.html
+++ b/mygallery/templates/add.html
@@ -24,7 +24,16 @@
                             <label>Select a cetegory</label>
                             <select name="category" class="form-control">
                                 <option value='none'>Select a category...</option>
+
+                                {% for category in categories %}
+                                <option value='{{category.id}}'>{{category.name}}</option>
+                                {% endfor %}
                             </select>
+                        </div>
+
+                        <div class="form-group m-3">
+                            <label>Create a new category</label>
+                            <input name="category_new" type="text" placeholder="Create a new category" class="form-control">
                         </div>
 
                         <div class="form-group m-3">
