--- a/mygallery/templates/add.html
+++ b/mygallery/templates/add.html
@@ -14,7 +14,8 @@
             <div class="col-md-4">
                 <a href="{% url 'gallery' %}" class="btn btn-dark my-3">Go Back</a>
                 <div class="card">
-                    <form>
+
+                    <form method='POST' action=""enctype="multipart/form-data">
                         <div class="form-group m-3">
                             <label>Description</label>
                             <input name="description" type="text" placeholder="Enter a description" class="form-control">
@@ -40,6 +41,8 @@
                             <label>Upload image</label>
                             <input name="image" type="file" placeholder="form-control-file">
                         </div>
+
+                        <button type='submit' class="btn btn-primary m-3">Submit</button>
                     </form>
                 </div>
             </div>
