--- a/mygallery/templates/add.html
+++ b/mygallery/templates/add.html
@@ -16,9 +16,10 @@
                 <div class="card">
 
                     <form method='POST' action=""enctype="multipart/form-data">
+                        {% csrf_token %}
                         <div class="form-group m-3">
                             <label>Description</label>
-                            <input name="description" type="text" placeholder="Enter a description" class="form-control">
+                            <input required name="description" type="text" placeholder="Enter a description" class="form-control">
                         </div>
                         
                         <div class="form-group m-3">
@@ -39,7 +40,7 @@
 
                         <div class="form-group m-3">
                             <label>Upload image</label>
-                            <input name="image" type="file" placeholder="form-control-file">
+                            <input required name="image" type="file" placeholder="form-control-file">
                         </div>
 
                         <button type='submit' class="btn btn-primary m-3">Submit</button>
