add a Readme file

--- a/mygallery/templates/gallery.html
+++ b/mygallery/templates/gallery.html
@@ -57,6 +57,17 @@
                 </div>
             </div>
         </div>
+        
+         <!-- Footer -->
+    <footer class="page-footer font-small blue pt-4">
+        <!-- Copyright -->
+        <div class="footer-copyright text-center py-3 text-light">
+            © Copyright 2022 <span class="text-brown">MyGallery</span>
+        </div>
+        <!-- Copyright -->
+    </footer>
+    <!-- Footer -->
+
     </div>
 
 
